# dotp

./: .coverage  .gitignore  README.md  aegis_sample.json  otpauth_sample.txt  pyproject.toml  spec.md
.github/workflows/: lint.yml  test.yml
src/dotp/: __init__.py  cli.py  config.py  crypto.py  importexport.py  totp.py  tui.py  vault.py
tests/: __init__.py  test_crypto.py  test_importexport.py  test_totp.py  test_vault.py
